@@ -185,3 +185,4 @@ playbackinfo.json
 ytheaders.json
 .idea/
 settings.json
+test.py
